syntax = "proto3";

option java_package = "sideChain.iroha.schema";
option java_outer_classname = "BlockService";

import "block.proto";
import "queries.proto";
import "responses.proto";
import "primitive.proto";


message QueryPayloadMeta {
    uint64 created_time = 1;
    string creator_account_id = 2;
    // used to prevent replay attacks.
    uint64 query_counter = 3;
}

message BlocksQuery {
    QueryPayloadMeta meta = 1;
    iroha.protocol.Signature signature = 2;
}

message BlockResponse {
    iroha.protocol.Block block = 1;
}

message BlocksQueryResponse {
    oneof response {
        iroha.protocol.ErrorResponse error_response = 1;
        BlockResponse block_response = 2;
    }
}

service QueryService {
    rpc FetchCommits (BlocksQuery) returns (stream BlocksQueryResponse);
}
